cleanup. hiding/disabling non-developed form copy options. hiding "Internal" inspection boolean (non-developed) from "Inspections in Category" dialog Files modified - [ManageInspections,EditInspection,ManageForms]

--- a/src/main/webapp/pages/EditInspection/EditInspection.html
+++ b/src/main/webapp/pages/EditInspection/EditInspection.html
@@ -11,7 +11,7 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow25_1">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn57_1" padding="2em unset">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn57_1" padding="unset unset 1em unset">
                         <wm-label name="label2_1" caption="bind:'Edit Inspection: ' + Variables.CurrentInspectionObj.dataSet.data[$i].inspectDesignName + ' (' + Variables.CurrentInspectionObj.dataSet.data[$i].municipalities.municipalityName + ')'" fontweight="bold"
                         class="h4"></wm-label>
                     </wm-gridcolumn>
