Removed placeholder text from "Advance to Status" pulldown since blank selections were being allowed Files modified - [EditForm]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -570,7 +570,7 @@
                                                                         <wm-gridcolumn columnwidth="4" name="gridcolumn129" padding="unset 1em unset unset">
                                                                             <wm-form-field name="statusToBeOnForAdvanceOnZero" displayname="Advance to Status" show="bind:Widgets.lfFormTypeStatus.formWidgets.advanceOnZero.datavalue" primary-key="false" generator="assigned"
                                                                             key="statusToBeOnForAdvanceOnZero" type="integer" readonly="false" required="bind:Widgets.lfFormTypeStatus.formWidgets.advanceOnZero.datavalue" step="0" widget="select" inputtype="number"
-                                                                            placeholder="Select Status" dataset="bind:Variables.StatusesData.dataSet" datafield="id" displayfield="status" defaultvalue="bind:Variables.StatusesData.firstRecord.id"></wm-form-field>
+                                                                            placeholder="" dataset="bind:Variables.StatusesData.dataSet" datafield="id" displayfield="status" defaultvalue="bind:Variables.StatusesData.firstRecord.id"></wm-form-field>
                                                                             <wm-label padding="unset 1em" name="label27_9" show="bind:Widgets.lfFormTypeStatus.formWidgets.advanceOnZero.datavalue" caption="Specify the status that you would like the form to advance to automatically when all fees are paid."
                                                                             class="help-block" fontsize="0.8" fontunit="em"></wm-label>
                                                                         </wm-gridcolumn>
